--- a/admin-dashboard/health-facilities.html
+++ b/admin-dashboard/health-facilities.html
@@ -280,7 +280,6 @@
                         class="facilities-card d-flex flex-column flex-md-row justify-content-between align-items-center mb-4">
                         <h5 class="card-title mb-0 heading-text">Health Care Facilities</h5>
                         <div class="d-flex align-items-center seach-filter">
-
                             <div class="dropdown">
                                 <button class="btn btn-outline-secondary dropdown-toggle" id="sort-filter" type="button"
                                     data-bs-toggle="dropdown">
@@ -288,7 +287,7 @@
                                 </button>
                                 <ul class="dropdown-menu w-100">
                                     <li>
-                                        <div class="search-box px-2">
+                                        <div class="search-box px-2 w-100">
                                             <input type="text" id="searchInput" class="form-control"
                                                 placeholder="Search">
                                         </div>
