--- a/facility-listings.html
+++ b/facility-listings.html
@@ -32,29 +32,32 @@
 
             <!-- Navbar Links -->
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul
-                    class="navbar-nav align-items-lg-center justify-content-lg-center flex-lg-grow-1 mb-2 mb-lg-0 mt-lg-0 mt-4 d-lg-none">
-                    <!-- <li class="nav-item">
-                            <a class="nav-link mx-2 text-primary" href="#">Emergency</a>
-                        </li>
+                    <ul
+                        class="navbar-nav align-items-lg-center justify-content-lg-center flex-lg-grow-1 mb-2 mb-lg-0 mt-lg-0 mt-4 d-lg-none">
+                        <!-- <li class="nav-item">
+                                            <a class="nav-link mx-2 text-primary" href="#">Emergency</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link mx-2 text-primary" href="#">Community</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link mx-2 text-primary" href="#" id="registerBtn">Register</a>
+                                        </li> -->
                         <li class="nav-item">
-                            <a class="nav-link mx-2 text-primary" href="#">Community</a>
+                            <a class="nav-link mx-2 text-primary" href="facility-listings.html">Facility
+                                Listings</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link mx-2 text-primary" href="#" id="registerBtn">Register</a>
-                        </li> -->
-                    <li class="nav-item">
-                        <a class="nav-link mx-2 text-primary" href="facility-listings.html" id="registerBtn">Facility
-                            Listings</a>
-                    </li>
-                    <li class="nav-item  d-lg-none" id="logout-btn-container">
-                        <button
-                            class="dropdown-item py-2 text-primary fw-semibold logout-btn nav-link mx-2 text-primary"
-                            id="logout-btn2">
-                            Logout
-                        </button>
-                    </li>
-                </ul>
+                        <li class="nav-item" id="nav-admin-dashboard">
+                            <a class="nav-link mx-2 text-primary" href="/admin-dashboard/health-facilities.html">My
+                                Account</a>
+                        </li>
+                        <li class="nav-item  d-lg-none" id="logout-btn-container">
+                            <button class="dropdown-item py-2 text-primary fw-semibold logout-btn nav-link mx-2 text-primary"
+                                id="logout-btn2">
+                                Logout
+                            </button>
+                        </li>
+                    </ul>
 
                 <!-- Login Button -->
                 <div class="d-flex ms-lg-auto" id="login-btn">
@@ -219,7 +222,6 @@
 
         let time_slots = [];
         const id = localStorage.getItem('u_id');
-        console.log(id);
         axios.get('https://health-care-facilities-backend.vercel.app/api/get-user', {
             headers: {
                 'id': id
@@ -232,9 +234,8 @@
             userName.forEach((name) => {
                 name.innerHTML = `${res.data.user.name} ${res.data.user.last_name}`;
             })
-
+            
             email.innerHTML = res.data.user.role
-
 
             if (res.data.user.role === 'super admin') {
                 document.getElementById('admin-dashboard').classList.remove('d-none');
@@ -308,7 +309,6 @@
                 facilityContainer.innerHTML = "";
 
                 paginatedData.forEach((item) => {
-                    console.log(item);
                     let timingHTML = '';
                     let facilityAEHTML = '';
                     const timeSlots = item.time_slots;
@@ -347,9 +347,6 @@
 
                             const openingTime = formatTime(timeSlots[0].start_time);
                             const closingTime = formatTime(timeSlots[0].end_time);
-
-                            console.log(timeSlots[0].start_time);
-                            console.log(timeSlots[0].end_time);
 
                             timingHTML = `<p class="hours-normal mb-1">Opens ${openingTime} - Closes ${closingTime}</p>`;
                         } else if (item.is_24_hours === 'no') {
@@ -497,8 +494,6 @@
                         const openingTime = formatTime(timeSlots[0].start_time);
                         const closingTime = formatTime(timeSlots[0].end_time);
 
-                        console.log(timeSlots[0].start_time);
-                        console.log(timeSlots[0].end_time);
 
                         timingHTML = `<p class="hours-normal mb-1">Opens ${openingTime} - Closes ${closingTime}</p>`;
                     } else if (item.is_24_hours === 'no') {
