--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
                         <a class="nav-link mx-2 text-primary" href="facility-listings.html">Facility
                             Listings</a>
                     </li>
-                    <li class="nav-item" id="nav-admin-dashboard">
-                        <a class="nav-link mx-2 text-primary" href="/admin-dashboard/health-facilities.html">Admin Dashboard</a>
+                    <li class="nav-item d-none" id="nav-admin-dashboard">
+                        <a class="nav-link mx-2 text-primary" href="/admin-dashboard/health-facilities.html">Admin
+                            Dashboard</a>
                     </li>
                     <li class="nav-item  d-lg-none" id="logout-btn-container">
                         <button
@@ -92,19 +93,20 @@
                                     </div>
                                 </div>
                             </li>
-                            <li id="admin-dashboard"><a class="dropdown-item py-2 d-flex align-items-center gap-3"
+                            <li id="admin-dashboard" class="d-none"><a class="dropdown-item py-2 d-flex align-items-center gap-3"
                                     href="/admin-dashboard/health-facilities.html">
                                     <img src="assets/images/user.png" width="25" alt="">
                                     Admin Dashboard
                                 </a></li>
                             <li><a class="dropdown-item py-2 d-flex align-items-center gap-3"
                                     href="/facility-listings.html">
-                                <svg width="25" height="26" viewBox="0 0 26 26" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <path
-                                        d="M10.8333 13.0002C9.64163 13.0002 8.62149 12.5759 7.77288 11.7272C6.92426 10.8786 6.49996 9.8585 6.49996 8.66683C6.49996 7.47516 6.92426 6.45502 7.77288 5.60641C8.62149 4.7578 9.64163 4.3335 10.8333 4.3335C12.025 4.3335 13.0451 4.7578 13.8937 5.60641C14.7423 6.45502 15.1666 7.47516 15.1666 8.66683C15.1666 9.8585 14.7423 10.8786 13.8937 11.7272C13.0451 12.5759 12.025 13.0002 10.8333 13.0002ZM2.16663 19.5002V18.6335C2.16663 18.0377 2.3201 17.4779 2.62704 16.9543C2.93399 16.4307 3.35829 16.0335 3.89996 15.7627C4.94718 15.2391 6.03051 14.8281 7.14996 14.5298C8.2694 14.2316 9.41593 14.0828 10.5895 14.0835C10.8965 14.0835 11.154 14.1918 11.362 14.4085C11.57 14.6252 11.6736 14.887 11.6729 15.1939C11.6722 15.5009 11.5682 15.7583 11.3609 15.9663C11.1536 16.1743 10.8965 16.278 10.5895 16.2772C9.57843 16.2772 8.59874 16.4036 7.65046 16.6564C6.70218 16.9092 5.77701 17.2613 4.87496 17.7127C4.6944 17.8029 4.55899 17.9293 4.46871 18.0918C4.37843 18.2543 4.33329 18.4349 4.33329 18.6335V19.5002H10.5895C10.8965 19.5002 11.154 19.6042 11.362 19.8122C11.57 20.0202 11.6736 20.2773 11.6729 20.5835C11.6722 20.8897 11.5682 21.1472 11.3609 21.3559C11.1536 21.5646 10.8965 21.6683 10.5895 21.6668H4.33329C3.73746 21.6668 3.22757 21.4549 2.80363 21.0309C2.37968 20.607 2.16735 20.0967 2.16663 19.5002ZM17.1708 21.8835L17.0083 21.1252C16.7916 21.0349 16.5887 20.9403 16.3995 20.8413C16.2102 20.7424 16.016 20.6203 15.8166 20.4752L15.0312 20.7189C14.7965 20.7911 14.5665 20.7821 14.3411 20.6918C14.1158 20.6016 13.9396 20.4571 13.8125 20.2585L13.5958 19.8793C13.4694 19.6627 13.4243 19.4279 13.4604 19.1752C13.4965 18.9224 13.6138 18.7147 13.8125 18.5522L14.4083 18.0377C14.3722 17.7849 14.3541 17.5502 14.3541 17.3335C14.3541 17.1168 14.3722 16.8821 14.4083 16.6293L13.8125 16.1147C13.6138 15.9522 13.4965 15.7489 13.4604 15.5048C13.4243 15.2607 13.4694 15.0307 13.5958 14.8147L13.8395 14.4085C13.9659 14.2099 14.1375 14.0654 14.3541 13.9752C14.5708 13.8849 14.7965 13.8759 15.0312 13.9481L15.8166 14.1918C16.0152 14.0474 16.2095 13.9253 16.3995 13.8257C16.5894 13.726 16.7923 13.6314 17.0083 13.5418L17.1708 12.7564C17.225 12.5036 17.347 12.3007 17.537 12.1476C17.7269 11.9945 17.9479 11.9176 18.2 11.9168H18.6333C18.8861 11.9168 19.1074 11.9981 19.2974 12.1606C19.4873 12.3231 19.609 12.5307 19.6625 12.7835L19.825 13.5418C20.0416 13.6321 20.2446 13.7314 20.4338 13.8397C20.623 13.9481 20.8173 14.0835 21.0166 14.246L21.7479 14.0022C22.0007 13.912 22.2444 13.912 22.4791 14.0022C22.7138 14.0925 22.8944 14.246 23.0208 14.4627L23.2375 14.8418C23.3638 15.0585 23.409 15.2932 23.3729 15.546C23.3368 15.7988 23.2194 16.0064 23.0208 16.1689L22.425 16.6835C22.4611 16.9002 22.4791 17.1259 22.4791 17.3606C22.4791 17.5953 22.4611 17.821 22.425 18.0377L23.0208 18.5522C23.2194 18.7147 23.3368 18.918 23.3729 19.1622C23.409 19.4063 23.3638 19.6363 23.2375 19.8522L22.9937 20.2585C22.8673 20.4571 22.6958 20.6016 22.4791 20.6918C22.2625 20.7821 22.0368 20.7911 21.802 20.7189L21.0166 20.4752C20.818 20.6196 20.6237 20.7413 20.4338 20.8402C20.2438 20.9392 20.0409 21.0342 19.825 21.1252L19.6625 21.9106C19.6083 22.1634 19.4866 22.3667 19.2974 22.5205C19.1082 22.6743 18.8868 22.7509 18.6333 22.7502H18.2C17.9472 22.7502 17.7262 22.6689 17.537 22.5064C17.3477 22.3439 17.2257 22.1363 17.1708 21.8835ZM18.4166 19.5002C19.0125 19.5002 19.5227 19.2882 19.9474 18.8642C20.372 18.4403 20.584 17.9301 20.5833 17.3335C20.5826 16.7369 20.3706 16.2271 19.9474 15.8038C19.5242 15.3806 19.0139 15.1683 18.4166 15.1668C17.8193 15.1654 17.3095 15.3777 16.887 15.8038C16.4645 16.2299 16.2521 16.7398 16.25 17.3335C16.2478 17.9272 16.4601 18.4374 16.887 18.8642C17.3138 19.2911 17.8237 19.5031 18.4166 19.5002ZM10.8333 10.8335C11.4291 10.8335 11.9394 10.6215 12.364 10.1976C12.7887 9.77363 13.0007 9.26338 13 8.66683C12.9992 8.07027 12.7873 7.56038 12.364 7.13716C11.9408 6.71394 11.4306 6.50161 10.8333 6.50016C10.236 6.49872 9.72613 6.71105 9.30363 7.13716C8.88113 7.56327 8.66879 8.07316 8.66663 8.66683C8.66446 9.2605 8.87679 9.77075 9.30363 10.1976C9.73046 10.6244 10.2403 10.8364 10.8333 10.8335Z"
-                                        fill="#000"></path>
-                                </svg>
+                                    <svg width="26px" height="26px" viewBox="0 0 24 24" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" clip-rule="evenodd"
+                                            d="M21.5 8.5C21.5 7.09554 21.5 6.39331 21.1629 5.88886C21.017 5.67048 20.8295 5.48298 20.6111 5.33706C20.1699 5.04224 19.5774 5.00529 18.496 5.00066C18.5001 5.29206 18.5 5.59655 18.5 5.91051L18.5 6V7.25H19.5C19.9142 7.25 20.25 7.58579 20.25 8C20.25 8.41421 19.9142 8.75 19.5 8.75H18.5V10.25H19.5C19.9142 10.25 20.25 10.5858 20.25 11C20.25 11.4142 19.9142 11.75 19.5 11.75H18.5V13.25H19.5C19.9142 13.25 20.25 13.5858 20.25 14C20.25 14.4142 19.9142 14.75 19.5 14.75H18.5V21.25H17V6C17 4.11438 17 3.17157 16.4142 2.58579C15.8284 2 14.8856 2 13 2H11C9.11438 2 8.17157 2 7.58579 2.58579C7 3.17157 7 4.11438 7 6V21.25H5.5V14.75H4.5C4.08579 14.75 3.75 14.4142 3.75 14C3.75 13.5858 4.08579 13.25 4.5 13.25H5.5V11.75H4.5C4.08579 11.75 3.75 11.4142 3.75 11C3.75 10.5858 4.08579 10.25 4.5 10.25H5.5V8.75H4.5C4.08579 8.75 3.75 8.41421 3.75 8C3.75 7.58579 4.08579 7.25 4.5 7.25H5.5V6L5.49999 5.9105C5.49996 5.59655 5.49992 5.29206 5.50403 5.00066C4.42262 5.00529 3.83008 5.04224 3.38886 5.33706C3.17048 5.48298 2.98298 5.67048 2.83706 5.88886C2.5 6.39331 2.5 7.09554 2.5 8.5V21.25H2C1.58579 21.25 1.25 21.5858 1.25 22C1.25 22.4142 1.58579 22.75 2 22.75H22C22.4142 22.75 22.75 22.4142 22.75 22C22.75 21.5858 22.4142 21.25 22 21.25H21.5V8.5ZM12 4.25C12.4142 4.25 12.75 4.58579 12.75 5V6.25H14C14.4142 6.25 14.75 6.58579 14.75 7C14.75 7.41421 14.4142 7.75 14 7.75H12.75V9C12.75 9.41421 12.4142 9.75 12 9.75C11.5858 9.75 11.25 9.41421 11.25 9V7.75H10C9.58579 7.75 9.25 7.41421 9.25 7C9.25 6.58579 9.58579 6.25 10 6.25H11.25V5C11.25 4.58579 11.5858 4.25 12 4.25ZM9.25 12C9.25 11.5858 9.58579 11.25 10 11.25H14C14.4142 11.25 14.75 11.5858 14.75 12C14.75 12.4142 14.4142 12.75 14 12.75H10C9.58579 12.75 9.25 12.4142 9.25 12ZM9.25 15C9.25 14.5858 9.58579 14.25 10 14.25H14C14.4142 14.25 14.75 14.5858 14.75 15C14.75 15.4142 14.4142 15.75 14 15.75H10C9.58579 15.75 9.25 15.4142 9.25 15ZM12 18.25C12.4142 18.25 12.75 18.5858 12.75 19V21.25H11.25V19C11.25 18.5858 11.5858 18.25 12 18.25Z"
+                                            fill="#000" />
+                                    </svg>
+                                    </svg>
                                     Facility Listings
                                 </a></li>
                             <div class="border-top mt-2 pt-2">
@@ -606,52 +608,52 @@
     <script src="js/share.js"></script>
     <script src="js/country-states.js"></script>
     <script>
-   var user_country_code = ""; // Default me koi country selected nahi
+        var user_country_code = ""; // Default me koi country selected nahi
 
-    (() => {
-        const country_list = country_and_states.country;
-        const state_list = country_and_states.states;
+        (() => {
+            const country_list = country_and_states.country;
+            const state_list = country_and_states.states;
 
-        const id_state_option = document.getElementById("state-drop-down");
-        const id_country_option = document.getElementById("country");
+            const id_state_option = document.getElementById("state-drop-down");
+            const id_country_option = document.getElementById("country");
 
-        // Initially disable the state dropdown
-        id_state_option.innerHTML = '<option>select state</option>';
-        id_state_option.setAttribute("disabled", "disabled");
+            // Initially disable the state dropdown
+            id_state_option.innerHTML = '<option>select state</option>';
+            id_state_option.setAttribute("disabled", "disabled");
 
-        const create_country_selection = () => {
-            let option = '<option value="" selected disabled>Select Country</option>'; // Placeholder option
-            for (const country_code in country_list) {
-                option += '<option value="' + country_code + '">' + country_list[country_code] + '</option>';
-            }
-            id_country_option.innerHTML = option;
-        };
+            const create_country_selection = () => {
+                let option = '<option value="" selected disabled>Select Country</option>'; // Placeholder option
+                for (const country_code in country_list) {
+                    option += '<option value="' + country_code + '">' + country_list[country_code] + '</option>';
+                }
+                id_country_option.innerHTML = option;
+            };
 
-        const create_states_selection = () => {
-            let selected_country_code = id_country_option.value;
-            let state_names = state_list[selected_country_code];
+            const create_states_selection = () => {
+                let selected_country_code = id_country_option.value;
+                let state_names = state_list[selected_country_code];
 
-            if (!state_names) {
-                id_state_option.innerHTML = '<option>select state</option>';
-                id_state_option.setAttribute("disabled", "disabled");
-                return;
-            }
+                if (!state_names) {
+                    id_state_option.innerHTML = '<option>select state</option>';
+                    id_state_option.setAttribute("disabled", "disabled");
+                    return;
+                }
 
-            let option = '<option>select state</option>';
-            state_names.forEach(state => {
-                option += '<option value="' + state.code + '">' + state.name + '</option>';
-            });
+                let option = '<option>select state</option>';
+                state_names.forEach(state => {
+                    option += '<option value="' + state.code + '">' + state.name + '</option>';
+                });
 
-            id_state_option.innerHTML = option;
-            id_state_option.removeAttribute("disabled"); // Enable dropdown when country is selected
-        };
+                id_state_option.innerHTML = option;
+                id_state_option.removeAttribute("disabled"); // Enable dropdown when country is selected
+            };
 
-        // Country select change event update state dropdown
-        id_country_option.addEventListener('change', create_states_selection);
+            // Country select change event update state dropdown
+            id_country_option.addEventListener('change', create_states_selection);
 
-        // Initialize country dropdown with placeholder
-        create_country_selection();
-    })();
+            // Initialize country dropdown with placeholder
+            create_country_selection();
+        })();
 
 
         let user = '';
@@ -670,14 +672,15 @@
 
         let time_slots = [];
         const id = localStorage.getItem('u_id');
+        // const id = localStorage.getItem('#985098ljfj98309');
         console.log(id);
         axios.get('https://health-care-facilities-backend.vercel.app/api/get-user', {
             headers: {
                 'id': id
             }
         }).then((res) => {
-            console.log(res.data);
             user = res.data.user.name;
+
             const userName = document.querySelectorAll('.user-name');
             const email = document.getElementById('user-role');
 
@@ -696,7 +699,16 @@
                 document.getElementById('nav-admin-dashboard').classList.add('d-none');
             }
 
+            console.log(res.data.user.isBlocked);
+
+            if (res.data.user.isBlocked === true) {
+                localStorage.clear()
+            }
+
         }).catch((err) => {
+            if (err.response.data.error === 'User not found') {
+                localStorage.clear()
+            }
             console.log(err);
         })
 
@@ -792,14 +804,14 @@
                 });
             }
 
-         
+
             setAllButton.addEventListener('click', setAllTimes);
 
-           
+
             document.querySelectorAll('input[name="is_24hours"]').forEach(radio => {
                 radio.addEventListener('change', function () {
                     if (this.value === 'no') {
-                        createTimeSlots(); 
+                        createTimeSlots();
                         timeScheduleDiv.style.display = 'block';
                     } else {
                         timeScheduleDiv.style.display = 'none';
